--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="card">
 
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="Droney.png" alt="">
+                    <img class="activator" src="images/Droney.png" alt="">
                 </div>
 
                 <div class="card-content">
@@ -47,7 +47,7 @@
                 <div class="card">
 
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="DrMatch.png" alt="">
+                            <img class="activator" src="images/DrMatch.png" alt="">
                         </div>
         
                         <div class="card-content">
